PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jan 2012, PHP 5.4.0 RC5
- Core:
  . Fixed bug #60613 (Segmentation fault with $cls->{expr}() syntax). (Dmitry)
  . Fixed bug #60611 (Segmentation fault with Cls::{expr}() syntax). (Laruence)

- CLI SAPI:
  . Fixed bug #60591 (Memory leak when access a non-exists file). (Laruence)

- Intl:
  . Fixed build on Fedora 15 / Ubuntu 11. (Hannes)


22 Dec 2011, PHP 5.4.0 RC4
- Core:
  . Added max_input_vars directive to prevent attacks based on hash collisions
    (Dmitry).
  . Fixed bug #60536 (Traits Segfault). (Laruence)
  . Fixed bug #60362 (non-existent sub-sub keys should not have values).
    (Laruence, alan_k, Stas)
  . Fixed bug #60558 (Invalid read and writes). (Laruence)

- CLI SAPI:
  . Fixed bug #60477 (Segfault after two multipart/form-data POST requests,
    one 200 RQ and one 404). (Laruence)
  . Fixed bug #60523 (PHP Errors are not reported in browsers using built-in
    SAPI). (Laruence, Derick)

- OpenSSL:
  . Fix segfault with older versions of OpenSSL. (Scott)

- Pdo Firebird:
  . Fixed bug #48877 ("bindValue" and "bindParam" do not work for PDO Firebird).
    (Mariuz)

08 Dec 2011, PHP 5.4.0 RC3
- Core:
  . Fixed bug #60444 (Segmentation fault with include & class extending).
    (Laruence, Dmitry).
  . Fixed bug #60350 (No string escape code for ESC (ascii 27), normally \e).
    (php at mickweiss dot com)
  . Fixed bug #60240 (invalid read/writes when unserializing specially crafted
    strings). (Mike)
  . Implement FR #54514 (Get php binary path during script execution).
    (Laruence)

- CLI SAPI:
  . Implement FR #60390 (Missing $_SERVER['SERVER_PORT']). (Pierre)

- cURL:
  . Fixed bug #60439 (curl_copy_handle segfault when used with
    CURLOPT_PROGRESSFUNCTION). (Pierrick)

- Intl:
  . Added support for UTS #46. (Gustavo)

- OpenSSL: